# countries-data

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/scripts/internal/: bump_version.py
.github/workflows/: publish.yml  release.yml  update_row_data.yml
scripts/: build.sh  lint.sh  test.sh
src/: __init__.py
src/countries_data/: __init__.py  models.py
src/countries_data/data/subdivisions/: FR.json  GB.json  IT.json  RU.json  SI.json  UG.json
src/countries_data/service/: countries_data.py
src/country_registry/data/subdivisions/: TR.json
tests/: test_countries_data.py
