[tool.poetry]
name = "countries-data"
version = "0.1.0"
description = "Return useful information for every country in the ISO 3166 standard."
authors = ["Avishay Maor <avishaym@cashcow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
loguru = "^0.7.3"
pydantic = "^2.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
ruff = "*"


[tool.ruff]
line-length = 120
target-version = "py312"


[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "W", # pycodestyle (warnings)
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "EXE", # flake8-executable
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT", # flake8-pytest
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8--use-pathlib
    "ERA", # flake8-eradicate
    "RUF", # ruff specific rules
    "PL", # pylint
]
